[package]
name = "do-on-demand-droplet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
reqwest = "0.11.14"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde_json = "1.0"
