[package]
name = "do-on-demand-droplet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde_json = "1.0"
serde = {version = "1.0.152", features = ["derive"]}
serenity = { version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
